infra/k8s/base/mcp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-server
  labels:
    app: mcp-server
spec:
  type: ClusterIP
  ports:
    - port: 5005
      targetPort: 5005
      name: http-mcp
  selector:
    app: mcp-server
